style.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

:root {
  --cyan: #35b5a5;
  --lila: #8973cc;
  --blue: #5271ff;
  --skyBlue: #519fb2;
  --footerBlue: #5c729e;
}
body {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  min-width: 100vw;
  max-width: 100vw;
  background: linear-gradient(white, var(--cyan));
  background-repeat: no-repeat;
  background-size: cover;
  overflow-x: hidden;
  color: #333;
}
input,
textarea {
  font-family: "Montserrat";
  border: none;
}
textarea {
  padding: 20px;
}
.body-container {
  margin: 0px auto;
  margin-top: 5vh;
  min-width: 90vw;
  max-width: 90vw;
}

/* NAVBAR */
.navbar {
  min-width: 100%;
  max-width: 100%;
  min-height: 10vh;
  max-height: 10vh;
}
.navbar-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.navbar-items {
  display: flex;
  flex-direction: row;
  list-style: none;
  align-items: center;
}

.nav-item {
  color: black;
  font-size: 1.5em;
  cursor: pointer;
}
.nav-item:hover {
  color: var(--skyBlue);
}
.navbar-items > :nth-child(2) {
  padding: 0px 3em;
}

/* LANDING SECTION */
#landing {
  max-width: 80%;
  min-height: 85vh;
  max-height: 85vh;
  display: flex;
  justify-content: center;
  margin: 0px auto;
}
.landing-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
h4 {
  margin: 0px auto;
  font-size: 1.5em;
  padding: 2.5em;
  font-weight: normal;
  text-align: center;
  min-width: 50%;
  max-width: 80%;
}
.landing-container h2 {
  font-size: 4em;
}

/* ACTION BUTTON */
.btn-action {
  min-width: 380px;
  max-width: 380px;
  min-height: 70px;
  max-height: 70px;
  border-radius: 40px;
  padding: 10, px;
  border: none;
  background-image: linear-gradient(
    to right,
    rgb(142, 86, 158),
    rgb(135, 97, 166),
    rgb(133, 115, 179),
    rgb(109, 137, 191)
  );
  background-color: #333;
  cursor: pointer;
  margin-bottom: 5vh;
}
.btn-action span {
  font-size: 2em;
  font-weight: bold;
  color: white;
}

.btn-action:hover {
  background-image: none;
  background-color: #333;
  border: 2px solid #333;
}

/* PROPUESTAS */
#propuestas {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.header-container {
  max-width: 650px;
  display: flex;
  justify-content: center;
  margin: 0px auto;
  margin-bottom: 6em;
}
.header-container h3 {
  max-height: 1.8em;
  min-height: 1.8em;
  font-size: 2.5em;
  font-weight: 900;
  color: white;
  text-transform: uppercase;
  background-color: var(--cyan);
  padding: 10px;
  margin-right: 20px;
}

.grid-container {
  min-width: 100%;
  max-width: 100%;
  display: grid;
  grid-template-columns: auto auto auto auto;
  grid-template-rows: 350px 350px;
}
.card-body {
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid rgb(142, 86, 158);
  cursor: pointer;
}
.card-icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}
.card-icon h3 {
  margin-top: 20px;
  text-transform: uppercase;
}
.card-description {
  position: absolute;
  background-image: linear-gradient(
    to right,
    rgb(142, 86, 158),
    rgb(135, 97, 166),
    rgb(133, 115, 179),
    rgb(109, 137, 191)
  );
  width: 540px;
  height: 350px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.card-description h3 {
  text-transform: uppercase;
  padding-bottom: 20px;
}

/* UTILS CLASS */
.row {
  min-width: 100%;
  max-width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.col-6 {
  display: flex;
  flex-direction: column;
  min-width: 50%;
  max-width: 50%;
}
.rotateLeft {
  transform: rotate(-6deg);
}
.rotateRight {
  margin-top: 20px;
  transform: rotate(6deg);
}
.barra {
  overflow-x: hidden;
  min-width: 110vw;
  max-width: 110vw;
  margin-left: -75px;
}
.barraDos {
  min-width: 100vw;
  max-width: 100vw;
  margin-left: -140px;
}
.mt-2 {
  margin-top: 20vh;
}
.mb-2 {
  margin-bottom: 20vh;
}
.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
}
.card-body:hover > .card-description {
  visibility: visible;
  opacity: 1;
}
/* SOBRE  */
#sobre .header-container h3 {
  background-color: var(--lila);
}
#sobre h4 {
  min-width: 20vw;
  max-width: 50vw;
  padding: 0px;
}
/* PROFILES */
.profiles-container {
  margin: 10vh 0px 5vh 0px;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.tooltip {
  position: absolute;
  width: 200px;
  height: 100px;
  background-color: white;
  color: black;
  border-radius: 20px;
}
.tooltip-content {
  padding: 10px;
  text-align: center;
}
.tooltip-content h5 {
  font-size: 1.3em;
  padding-bottom: 5px;
  text-transform: capitalize;
  font-weight: bold;
}
.tooltip-conten p {
  color: grey;
}
.profile-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.profile-thumbnail {
  margin: 5px;
  border-radius: 50%;
  border: 10px solid white;
  margin-top: 120px;
}
.profile-thumbnail:hover {
  cursor: pointer;
  background: linear-gradient(white, white) padding-box,
    linear-gradient(
        to right,
        rgb(142, 86, 158),
        rgb(135, 97, 166),
        rgb(133, 115, 179),
        rgb(109, 137, 191)
      )
      border-box;
  border-radius: 50em;
  border: 10px solid transparent;
}
#sobre .barra {
  margin-left: -100px;
  background-color: var(--lila);
}

/* CONTACT */
#contact .header-container h3 {
  background-color: var(--blue);
}
.contact-container {
  display: flex;
}
/* FORM */
.form {
  display: flex;
  flex-direction: column;
}
.form input {
  padding: 25px;
}
input[type="text"] {
  margin: 20px 0px;
}
.contact-container h2 {
  font-size: 2em;
  min-width: 100%;
  max-width: 100%;
  padding: 5px 0px;
  text-align: left;
}
::placeholder {
  font-family: "Montserrat";
  /* text-transform: capitalize; */
}
input[type="submit"] {
  font-family: "montserrat";
  font-size: 1.2em;
  margin-top: 5vh;
  margin-left: auto;
  color: white;
}
.contact-header {
  border-bottom: 2px solid #333;
  padding-bottom: 20px;
  width: 50%;
}

/* FOOTER */
footer {
  margin-top: -10px;
  background-color: var(--footerBlue);
}
footer h3 {
  margin-bottom: 20px;
}
footer .barra:nth-child(2) {
  background-color: var(--lila);
}
footer .row {
  min-width: 90vw;
  max-width: 90vw;
  margin: 0px auto;
  display: flex;
  color: white;
  justify-content: space-between;
}
footer .row:nth-child(1) {
  margin-bottom: 40px;
}
.footer-logo p {
  padding: 5px 0px;
}
.footer-bars {
  min-width: 100%;
  max-width: 100%;
}
.footer-img {
  margin-bottom: 20px;
}
ul li {
  list-style: none;
  text-decoration: none;
  padding: 10px 0px;
}
ul li a {
  color: white;
  text-decoration: none;
  font-size: 1.2em;
}
ion-icon {
  font-size: 24px;
  padding-right: 10px;
}
/* FOOTER CONTACT */
.footer-contact ul li {
  display: flex;
  align-items: center;
}
/* FOOTER SOCIAL */
.footer-social ion-icon {
  font-size: 40px;
}
/* FOOTER RIGHTS */
.rights {
  border-top: 1px solid white;
}
.rights p {
  margin: 0px auto;
  text-align: center;
  padding: 40px;
  font-weight: bold;
}

/* MEDIA QUERIES */
@media (max-width: 1440px) {
  .profile-thumbnail {
    max-width: 250px;
    max-height: 250px;
  }
  .barra {
    min-width: 100vw;
    max-width: 100vw;
    margin-left: 0px;
  }
  .barraDos {
    max-width: 120vw;
    margin-left: -72px;
  }
  #sobre h4 {
    max-width: 60vw;
  }
  .contact-header {
    min-width: 60%;
  }
  .card-description {
    width: 322px;
  }
}
@media (max-width: 1024px) {
  .landing-container h2 {
    font-size: 3.5em;
    width: 100%;
    text-align: center;
  }
  .grid-container {
    grid-template-columns: auto auto;
    grid-template-rows: 350px 350px 350px 350px;
  }
  .card-description {
    width: 460px;
  }
  .profiles-container .row {
    flex-grow: 1;
    flex-wrap: wrap;
  }
  .profile-thumbnail {
    margin: 20px;
    margin-top: 120px;
  }
  .barraDos {
    max-width: 100vw;
    margin-left: -51px;
  }
}
@media (max-width: 768px) {
  .nav-item {
    font-size: 1.2em;
  }
  .landing-container h2 {
    font-size: 2.7em;
  }
  .header-container h3 {
    font-size: 2em;
  }
  h4 {
    font-size: 1.2em;
  }
  .card-description {
    width: 343px;
  }
  .btn-action {
    min-width: 300px;
    max-width: 300px;
    min-height: 70px;
    max-height: 70px;
  }
  .footer-links {
    display: none;
  }
}
@media (max-width: 320px) {
  .navbar-items {
    display: none;
  }
  .header-container {
    flex-direction: column;
  }
  .grid-container {
    margin: 0px auto;
    grid-template-columns: 250px;
    grid-template-rows: repeat(8, 300px);
  }
  .card-description {
    width: 324px;
  }
}

